--- a/admin.html
+++ b/admin.html
@@ -2,44 +2,60 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panel de Reportes Guardados | Districorr</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Lato&display=swap" rel="stylesheet">
+  <!-- Firebase SDK (compat version para firestore() v8) -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 </head>
 
-<body class="fondo-dinamico">
+<!-- Añadir clase 'admin-page' para estilos específicos si es necesario -->
+<body class="fondo-dinamico admin-page">
   <div class="container">
-    <header>
-      <img src="https://i.imgur.com/aA7RzTN.png" alt="Logo Districorr" style="max-height: 80px; display: block; margin: 0 auto;" />
-      <h2 style="text-align: center; margin-top: 15px;">📋 Reportes Enviados</h2>
+    <header style="margin-bottom: 30px;">
+      <img src="https://i.imgur.com/aA7RzTN.png" alt="Logo Districorr" style="max-height: 80px; display: block; margin: 0 auto 15px auto;" />
+      <h2 style="text-align: center; color: #333; font-family: 'Poppins', sans-serif;">📋 Reportes Guardados</h2>
     </header>
 
-    <div class="table-responsive" style="overflow-x: auto; margin-top: 30px;">
-      <table style="width:100%; border-collapse: collapse;">
-        <thead style="background-color: #007bff; color: white;">
+    <!-- Opcional: Añadir un campo de búsqueda (requiere JS adicional para funcionar) -->
+    <!--
+    <div class="form-group" style="margin-bottom: 20px;">
+      <input type="text" id="searchInput" class="form-control" placeholder="Buscar por paciente o médico..." onkeyup="filtrarTabla()">
+    </div>
+    -->
+
+    <div class="table-responsive">
+      <table id="reportesTable" style="width:100%;">
+        <thead>
           <tr>
-            <th style="padding: 10px;">Paciente</th>
-            <th style="padding: 10px;">Médico</th>
-            <th style="padding: 10px;">Tipo</th>
-            <th style="padding: 10px;">Fecha</th>
-            <th style="padding: 10px;">Material</th>
+            <!-- Columnas reordenadas y añadidas -->
+            <th>Fecha Cirugía</th>
+            <th>Paciente</th>
+            <th>Médico</th>
+            <th>Tipo Cirugía</th>
+            <th>Material (Inicio)</th>
+            <th>Usuario ID</th>
+            <th>Guardado En</th>
           </tr>
         </thead>
-        <tbody id="reporte-rows" style="background: #fff;"></tbody>
+        <tbody id="reporte-rows">
+          <!-- Las filas se cargarán aquí -->
+           <tr><td colspan="7" style="text-align:center; padding: 20px; color: #555;">Cargando reportes...</td></tr>
+        </tbody>
       </table>
     </div>
 
-    <div style="text-align: center; margin-top: 20px;">
+    <div style="text-align: center; margin-top: 30px;">
       <a href="index.html" class="btn-volver">← Volver al formulario</a>
     </div>
   </div>
 
   <script>
-    // Configuración de Firebase
+    // Configuración de Firebase (DEBE SER LA MISMA QUE EN script.js)
     const firebaseConfig = {
-      apiKey: "AIzaSyCFtuuSPCcQIkgDN_F1WRS4U-71pRNCf_E",
+      apiKey: "AIzaSyCFtuuSPCcQIkgDN_F1WRS4U-71pRNCf_E", // ¡ASEGÚRATE DE QUE ESTA SEA TU API KEY REAL!
       authDomain: "cirugia-reporte.firebaseapp.com",
       projectId: "cirugia-reporte",
       storageBucket: "cirugia-reporte.appspot.com",
@@ -48,75 +64,144 @@
       measurementId: "G-HD7ZLL1GLZ"
     };
 
+    // Inicializar Firebase
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    window.onload = function () {
-      aplicarFondoDinamico();
-      cargarReportes();
-    };
+    // Habilitar persistencia (opcional pero bueno para offline)
+    db.enablePersistence()
+      .catch((err) => {
+         if (err.code == 'failed-precondition') {
+          console.warn("Persistencia admin falló: Múltiples pestañas?");
+        } else if (err.code == 'unimplemented') {
+          console.warn("Persistencia admin no soportada.");
+        } else {
+          console.error("Error habilitando persistencia admin:", err);
+        }
+      });
 
+    // Formatea la fecha ISO (YYYY-MM-DD) a formato local
+    function formatearFechaLocal(fechaISO) {
+        if (!fechaISO) return '-';
+        try {
+            // Interpretar la fecha como local añadiendo hora
+            const partes = fechaISO.split('-');
+            if (partes.length !== 3) return fechaISO;
+            const fecha = new Date(parseInt(partes[0]), parseInt(partes[1]) - 1, parseInt(partes[2]), 12, 0, 0);
+            return fecha.toLocaleDateString('es-AR', { year: 'numeric', month: '2-digit', day: '2-digit' });
+        } catch (e) { return fechaISO; }
+    }
+
+     // Formatea el timestamp de Firestore a fecha y hora local
+    function formatearTimestamp(timestamp) {
+        if (!timestamp || !timestamp.toDate) return '-';
+        try {
+            return timestamp.toDate().toLocaleString('es-AR', {
+                year: 'numeric', month: '2-digit', day: '2-digit',
+                hour: '2-digit', minute: '2-digit'
+            });
+        } catch (e) { return '-'; }
+    }
+
+    // Carga los reportes desde Firestore y los muestra en la tabla
     function cargarReportes() {
       const tbody = document.getElementById("reporte-rows");
-      tbody.innerHTML = '<tr><td colspan="5" style="text-align:center;">Cargando reportes...</td></tr>';
+      tbody.innerHTML = '<tr><td colspan="7" style="text-align:center; padding: 20px; color: #555;">Cargando reportes...</td></tr>'; // Colspan 7 ahora
 
-      db.collection("reportes").orderBy("timestamp", "desc").get()
+      db.collection("reportes")
+        .orderBy("timestamp", "desc") // Ordenar por fecha de guardado, más reciente primero
+        .limit(100) // Limitar a los últimos 100 para rendimiento
+        .get()
         .then(snapshot => {
-          tbody.innerHTML = '';
+          tbody.innerHTML = ''; // Limpiar 'Cargando...'
           if (snapshot.empty) {
-            tbody.innerHTML = '<tr><td colspan="5" style="text-align:center;">No hay reportes guardados</td></tr>';
+            tbody.innerHTML = '<tr><td colspan="7" style="text-align:center; padding: 20px; color: #777;">No hay reportes guardados todavía.</td></tr>';
             return;
           }
 
           snapshot.forEach(doc => {
             const data = doc.data();
-            let fechaFormateada = 'Fecha no disponible';
-            try {
-              if (data.fechaCirugia) {
-                fechaFormateada = new Date(`${data.fechaCirugia}T00:00:00`).toLocaleDateString('es-AR');
-              } else if (data.timestamp?.toDate) {
-                fechaFormateada = data.timestamp.toDate().toLocaleDateString('es-AR');
-              }
-            } catch (e) {
-              console.error('Error formateando fecha:', e);
-            }
+            const fechaCirugiaFormateada = formatearFechaLocal(data.fechaCirugia);
+            const fechaGuardadoFormateada = formatearTimestamp(data.timestamp);
+            // Acortar material para visualización en tabla
+            const materialCortado = data.material
+                ? (data.material.substring(0, 40) + (data.material.length > 40 ? '...' : ''))
+                : '-'; // Mostrar guión si no hay material
+            const usuarioIdCorto = data.usuario ? data.usuario.substring(0, 6) : 'Anón.'; // Acortar ID y poner texto si es anónimo
 
             const tr = document.createElement("tr");
-            tr.innerHTML = `
-              <td style="padding: 10px;">${data.paciente || 'No especificado'}</td>
-              <td style="padding: 10px;">${data.medico || 'No especificado'}</td>
-              <td style="padding: 10px;">${data.tipoCirugia || 'No especificado'}</td>
-              <td style="padding: 10px;">${fechaFormateada}</td>
-              <td style="padding: 10px;">${data.material ? (data.material.length > 30 ? data.material.substring(0, 30) + '...' : data.material) : 'No especificado'}</td>`;
+
+            // Helper para crear celdas de forma segura
+            const createCell = (text) => {
+                const td = document.createElement('td');
+                td.textContent = text || '-'; // Mostrar guión si el valor es null/undefined/vacío
+                return td;
+            };
+
+            // Añadir celdas en el orden correcto de las columnas
+            tr.appendChild(createCell(fechaCirugiaFormateada));
+            tr.appendChild(createCell(data.paciente));
+            tr.appendChild(createCell(data.medico));
+            tr.appendChild(createCell(data.tipoCirugia));
+            tr.appendChild(createCell(materialCortado));
+            tr.appendChild(createCell(usuarioIdCorto));
+            tr.appendChild(createCell(fechaGuardadoFormateada));
+
             tbody.appendChild(tr);
           });
         })
         .catch(error => {
           console.error('Error cargando reportes:', error);
-          tbody.innerHTML = '<tr><td colspan="5" style="text-align:center;color:red;">Error cargando datos</td></tr>';
+          tbody.innerHTML = '<tr><td colspan="7" style="text-align:center; padding: 20px; color:red;">Error al cargar los reportes. Revise la consola.</td></tr>';
         });
     }
 
-    // Fondo dinámico
+    // Aplica fondo dinámico (opcional) o un fondo fijo
     function aplicarFondoDinamico() {
-      const body = document.body;
-      const dia = new Date().getDay(); // 0 = Domingo, 6 = Sábado
-
-      const fondos = {
-        0: "url('https://images.unsplash.com/photo-1588776814546-ec7e4c1a1d4d?auto=format&fit=crop&w=1920&q=80')", // Domingo
-        1: "url('https://images.unsplash.com/photo-1606813909027-5e0b8c1a1d4d?auto=format&fit=crop&w=1920&q=80')", // Lunes
-        2: "url('https://images.unsplash.com/photo-1517832606294-acecc31259b1?auto=format&fit=crop&w=1920&q=80')", // Martes
-        3: "url('https://images.unsplash.com/photo-1487014679447-9f8336841d58?auto=format&fit=crop&w=1920&q=80')", // Miércoles
-        4: "url('https://images.unsplash.com/photo-1470770841072-f978cf4d019e?auto=format&fit=crop&w=1920&q=80')", // Jueves
-        5: "url('https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=1920&q=80')", // Viernes
-        6: "url('https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?auto=format&fit=crop&w=1920&q=80')", // Sábado
-      };
-
-      body.style.backgroundImage = fondos[dia];
-      body.style.backgroundSize = 'cover';
-      body.style.backgroundRepeat = 'no-repeat';
-      body.style.backgroundAttachment = 'fixed';
+        document.body.style.backgroundColor = "#f0f2f5"; // Un gris ligeramente diferente para admin
     }
+
+    // Opcional: Función para filtrar la tabla (si descomentas el input de búsqueda)
+    /*
+    function filtrarTabla() {
+      const input = document.getElementById("searchInput");
+      const filter = input.value.toUpperCase();
+      const table = document.getElementById("reportesTable");
+      const tr = table.getElementsByTagName("tbody")[0].getElementsByTagName("tr");
+
+      for (let i = 0; i < tr.length; i++) {
+        // Buscar en columna Paciente (índice 1) y Médico (índice 2)
+        const tdPaciente = tr[i].getElementsByTagName("td")[1];
+        const tdMedico = tr[i].getElementsByTagName("td")[2];
+        let mostrar = false;
+
+        if (tdPaciente) {
+          const txtValuePaciente = tdPaciente.textContent || tdPaciente.innerText;
+          if (txtValuePaciente.toUpperCase().indexOf(filter) > -1) {
+            mostrar = true;
+          }
+        }
+        if (!mostrar && tdMedico) { // Solo buscar en médico si no coincidió paciente
+           const txtValueMedico = tdMedico.textContent || tdMedico.innerText;
+           if (txtValueMedico.toUpperCase().indexOf(filter) > -1) {
+            mostrar = true;
+          }
+        }
+
+        if (mostrar) {
+          tr[i].style.display = "";
+        } else {
+          tr[i].style.display = "none";
+        }
+      }
+    }
+    */
+
+    // Ejecutar al cargar la página
+    window.onload = function () {
+      aplicarFondoDinamico();
+      cargarReportes();
+    };
   </script>
 </body>
 </html>
