--- a/datos_admin.html
+++ b/datos_admin.html
@@ -10,59 +10,22 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <style>
-    /* Estilos adicionales específicos para esta página */
-    .admin-data-section {
-      margin-bottom: 40px;
-      padding: 20px;
-      border: 1px solid #e0e0e0;
-      border-radius: 8px;
-      background-color: #f9f9f9;
-    }
-    .admin-data-section h3 {
-      margin-top: 0;
-      margin-bottom: 20px;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 10px;
-      color: #0056b3;
-    }
-    .data-list {
-      list-style: none;
-      padding: 0;
-      max-height: 400px;
-      overflow-y: auto;
-      border: 1px solid #eee;
-      margin-bottom: 15px;
-    }
-    .data-list li, .data-table tr {
-      padding: 8px 12px;
-      border-bottom: 1px solid #eee;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-     .data-list li:last-child, .data-table tr:last-child td {
-       border-bottom: none;
-     }
-     .data-list li span, .data-table td {
-       flex-grow: 1;
-       margin-right: 10px;
-       word-break: break-word;
-     }
-     .data-actions button {
-       padding: 3px 8px;
-       font-size: 12px;
-       margin-left: 5px;
-       min-width: 60px; /* Ancho mínimo para botones */
-     }
-     .btn-edit { background-color: #ffc107; color: #333; }
-     .btn-edit:hover { background-color: #e0a800; }
-     .btn-delete { background-color: #dc3545; }
-     .btn-delete:hover { background-color: #c82333; }
-     .add-form { display: flex; gap: 10px; margin-bottom: 15px; flex-wrap: wrap; }
-     .add-form input { flex-grow: 1; }
-     .add-form button { flex-shrink: 0; }
-     #materialesTable th, #materialesTable td { white-space: normal; }
-     #loading-admin { text-align: center; padding: 15px; color: #555; }
+    .admin-data-section { margin-bottom: 40px; padding: 20px; border: 1px solid #e0e0e0; border-radius: 8px; background-color: #f9f9f9; }
+    .admin-data-section h3 { margin-top: 0; margin-bottom: 20px; border-bottom: 1px solid #ccc; padding-bottom: 10px; color: #0056b3; }
+    .data-list { list-style: none; padding: 0; max-height: 400px; overflow-y: auto; border: 1px solid #eee; margin-bottom: 15px; }
+    .data-list li, .data-table tr { padding: 8px 12px; border-bottom: 1px solid #eee; display: flex; justify-content: space-between; align-items: center; }
+    .data-list li:last-child, .data-table tr:last-child td { border-bottom: none; }
+    .data-list li span, .data-table td { flex-grow: 1; margin-right: 10px; word-break: break-word; }
+    .data-actions button { padding: 3px 8px; font-size: 12px; margin-left: 5px; min-width: 60px; }
+    .btn-edit { background-color: #ffc107; color: #333; }
+    .btn-edit:hover { background-color: #e0a800; }
+    .btn-delete { background-color: #dc3545; }
+    .btn-delete:hover { background-color: #c82333; }
+    .add-form { display: flex; gap: 10px; margin-bottom: 15px; flex-wrap: wrap; }
+    .add-form input { flex-grow: 1; }
+    .add-form button { flex-shrink: 0; }
+    #materialesTable th, #materialesTable td { white-space: normal; }
+    #loading-admin { text-align: center; padding: 15px; color: #555; }
   </style>
 </head>
 <body class="fondo-dinamico admin-page">
@@ -71,6 +34,21 @@
       <img src="https://i.imgur.com/aA7RzTN.png" alt="Logo Districorr" style="max-height: 80px; display: block; margin: 0 auto 15px auto;" />
       <h2 style="text-align: center; color: #333; font-family: 'Poppins', sans-serif;">⚙️ Administrar Datos Maestros</h2>
     </header>
+
+    <!-- Sección Clientes (NUEVA) -->
+    <div class="admin-data-section">
+      <h3>Clientes</h3>
+      <div class="add-form">
+        <input type="text" id="newClienteName" class="form-control" placeholder="Nuevo cliente...">
+        <button id="addClienteBtn" class="btn-primario">➕ Añadir</button>
+      </div>
+      <div id="clientesListContainer">
+         <p id="loading-clientes" style="text-align:center; color: #777;">Cargando clientes...</p>
+         <ul id="clienteList" class="data-list" style="display:none;">
+           <!-- Los clientes se cargarán aquí -->
+         </ul>
+      </div>
+    </div>
 
     <!-- Sección Tipos de Cirugía -->
     <div class="admin-data-section">
@@ -82,7 +60,6 @@
       <div id="tiposCxListContainer">
          <p id="loading-tiposcx" style="text-align:center; color: #777;">Cargando tipos de cirugía...</p>
          <ul id="tiposCxList" class="data-list" style="display:none;">
-           <!-- Los tipos de cirugía se cargarán aquí -->
          </ul>
       </div>
     </div>
@@ -101,22 +78,14 @@
            <div class="table-responsive">
                <table id="materialesTable" style="width:100%; display:none;">
                    <thead>
-                       <tr>
-                           <th>Código</th>
-                           <th>Descripción</th>
-                           <th>Categoría</th>
-                           <th>Acciones</th>
-                       </tr>
+                       <tr><th>Código</th><th>Descripción</th><th>Categoría</th><th>Acciones</th></tr>
                    </thead>
-                   <tbody id="materialesListBody">
-                       <!-- Los materiales se cargarán aquí -->
-                   </tbody>
+                   <tbody id="materialesListBody"></tbody>
                </table>
            </div>
        </div>
     </div>
 
-     <!-- Notificación Toast -->
      <div id="toast" class="toast-notification" style="display:none;"></div>
 
     <div style="text-align: center; margin-top: 30px;">
