--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
         </div>
 
       </div>
+      <a href="dashboard.html" class="btn-link" style="background-color: #17a2b8; color: white;" title="Ver pantalla de armado de cajas">📦 Ver Preparación</a>
       <div class="modal-footer">
         <button type="button" class="btn-link" onclick="cerrarModalSolicitudMaterial()">Cancelar</button>
         <button type="button" class="btn-primario" onclick="enviarSolicitudYCrearPedido()">Enviar Email y Crear Pedido</button>
